--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
 
       <p class="description">
-      The following <a href="https://datavizcatalogue.com/methods/sunburst_diagram.html">sunburst diagram</a> is an attempt to visualize the shape of <a href="https://github.com/sul-dlss/cocina-models">Cocina</a> descriptive metadata for objects in the Stanford Digital Repository. Cocina is expressed using JSON, and each wedge represents a portion of a JSON path for used in assertion, and is sized based on how many assertions it is part of. The JSON path radiates from the center out, and wedges can be clicked on to reveal additional sub paths. The data was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> which generated a <a href="data.csv">CSV file</a>.
+      The following <a href="https://datavizcatalogue.com/methods/sunburst_diagram.html">sunburst diagram</a> is an attempt to visualize the shape of <a href="https://github.com/sul-dlss/cocina-models">Cocina</a> descriptive metadata for objects in the Stanford Digital Repository. Cocina is expressed using JSON, and each wedge represents a portion of a JSON path for used in assertion, and is sized based on how many assertions it is part of. The JSON path radiates from the center out, and wedges can be clicked on to reveal additional parts of a path. The data was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> which generated a <a href="data.csv">CSV file</a>.
       </p>
 
 
