--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header>
-      <h1>Cocina Descriptive Metadata</h1>
+      <h1>The Shape of Cocina Descriptive Metadata</h1>
     </header>
     <div class="container">
 
