added a view of just records that have links to the catalog

--- a/index.html
+++ b/index.html
@@ -30,17 +30,19 @@
     <header>
       <h1>The Shape of Cocina Descriptive Metadata</h1>
     </header>
-    <div class="container">
-
-      <p class="description">
-      The following <a href="https://datavizcatalogue.com/methods/sunburst_diagram.html">sunburst diagram</a> is an attempt to visualize the shape of <a href="https://github.com/sul-dlss/cocina-models">Cocina</a> descriptive metadata for objects in the Stanford Digital Repository. Cocina is expressed using JSON, and each wedge represents a portion of a JSON path used in assertion, and is sized based on how many assertions it is part of. The JSON path radiates from the center out, and wedges can be clicked on to reveal additional parts of a path. The data was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> which generated a <a href="data.csv">CSV file</a>.
-      </p>
-
-
-      </p>
+    <section>
       <div class="description">
+	<p>The following <a href="https://datavizcatalogue.com/methods/sunburst_diagram.html">sunburst diagrams</a> attempt to visualize the shape of <a href="https://github.com/sul-dlss/cocina-models">Cocina</a> descriptive metadata for objects in the Stanford Digital Repository. Cocina is expressed using JSON, and each wedge (or node) in the diagram represents a portion of a JSON path used in assertion, and is sized based on how many assertions it is part of.</p>
+	<p>The JSON path radiates from the center out, and wedges can be clicked on to zoom in on additional parts of a path. After zooming in, clicking on the central wedge will cause the view to pop back out one-level. The hover text indicates the name of JSON path property (useful when the wedge is tiny) as well as a count of the number of assertions that the path is a part of (essentially a sum of all the leaf nodes it contains).</p>
+	<p>The data for the chart below was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> which generated this <a href="data-all.csv">CSV file</a>. </p>
       </div>
-      <div id="chart"></div>
+      <div id="chart-all"></div>
     </section>
+    <section>
+      <div class="description">
+        <p>The similar visualization below is of only SDR object descriptions for objects that link to the catalog. So effectively they are records which contain one or more <em>catalogLinks</em> in their Cocina <em>identification</em> metadata. Ostensibly these are resource descriptions that were derived from MARC. </p>
+	<p>The data for the chart below was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> with the <em>catalog_only: true</em> option which generated <a href="data-catalog.csv">this CSV file</a>. </p>
+      </div>
+      <div id="chart-catalog"></div>
   </body>
 </html>
