--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="description">
 	<p>The following <a href="https://datavizcatalogue.com/methods/sunburst_diagram.html">sunburst diagrams</a> attempt to visualize the shape of <a href="https://github.com/sul-dlss/cocina-models">Cocina</a> descriptive metadata for objects in the Stanford Digital Repository. Cocina is expressed using JSON, and each wedge (or node) in the diagram represents a portion of a JSON path used in assertion, and is sized based on how many assertions it is part of.</p>
 	<p>The JSON path radiates from the center out, and wedges can be clicked on to zoom in on additional parts of a path. After zooming in, clicking on the central wedge will cause the view to pop back out one-level. The hover text indicates the name of JSON path property (useful when the wedge is tiny) as well as a count of the number of assertions that the path is a part of (essentially a sum of all the leaf nodes it contains).</p>
-	<p>The data for the chart below was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> which generated this <a href="data-all.csv">CSV file</a>. </p>
+	<p>The data for the chart below was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> which generated <a href="data-all.csv">this CSV file</a>. </p>
       </div>
       <div id="chart-all"></div>
     </section>
