--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
     <section>
       <div class="description">
-        <p>The similar visualization below is of only SDR object descriptions for objects that link to the catalog. So effectively they are records which contain one or more <em>catalogLinks</em> in their Cocina <em>identification</em> metadata. Ostensibly these are resource descriptions that were derived from MARC. </p>
+        <p>The similar visualization below only includes descriptions for objects that link to the catalog: records which contain one or more <em>catalogLinks</em> in their Cocina <em>identification</em> metadata. Ostensibly these are resource descriptions that were derived from MARC. </p>
 	<p>The data for the chart below was generated using the <a href="https://github.com/sul-dlss/dor-services-app/blob/main/app/reports/descriptive_shape.rb">descriptive shape report</a> with the <em>catalog_only: true</em> option which generated <a href="data-catalog.csv">this CSV file</a>. </p>
       </div>
       <div id="chart-catalog"></div>
